--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -26,7 +26,7 @@ stages:
 steps:
   cloudFoundryDeploy:
     cloudFoundry:
-      apiEndpoint: "https://api.cf.eu10.hana.ondemand.com" # please verify if this is your API endpoint. If not, please change it
+      apiEndpoint: "https://api.cf.us10.hana.ondemand.com" # please verify if this is your API endpoint. If not, please change it
       org: "56692630trial" # add your org here
       space: "dev" # add your space here
       credentialsId: "cfdeploy"
