--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,5 +1,5 @@
 ###
-# This file configures the project “Piper” pipeline of your project.
+# This file configures the project "Piper" pipeline of your project.
 # For a reference of the configuration concept and available options, please have a look into its documentation.
 #
 # The documentation for the most recent pipeline version can always be found at:
@@ -9,26 +9,27 @@
 ###
 
 ### General project setup
----
 general:
   pipeline: "sap-cloud-sdk"
   buildTool: "mta"
+
+### Stage-specific configuration
 stages:
   Build:
     mavenExecuteStaticCodeChecks: false
     npmExecuteLint: false
   Additional Unit Tests:
-    npmExecuteScripts: false
+    npmExecuteScript: false
     karmaExecuteTests: false
-  Release:
-    cloudFoundryDeploy: true
-    tmsUpload: false
+Release:
+  cloudFoundryDeploy: true
+  tmsUpload: false
 steps:
-  cloudFoundryDeploy:
+  cloudFoudryDeploy:
     cloudFoundry:
-      apiEndpoint: "https://api.cf.us10.hana.ondemand.com" # please verify if this is your API endpoint. If not, please change ittt
-      org: "56692630trial" # add your org here
-      space: "dev" # add your space here
+      apiEndpoint: "https://api.cf.us10.hana.ondemand.com"
+      org: "56692630trial"
+      space: "dev"
       credentialsId: "cfdeploy"
       appName: ""
     mtaDeployParameters: "-f --version-rule ALL"
